--- a/android-app/core-features/app/src/main/res/xml/network_security_config.xml
+++ b/android-app/core-features/app/src/main/res/xml/network_security_config.xml
@@ -1,5 +1,6 @@
    <network-security-config>
        <domain-config cleartextTrafficPermitted="true">
+<!--           <domain includeSubdomains="true">10.170.15.138</domain>-->
            <domain includeSubdomains="true">192.168.110.160</domain>
        </domain-config>
    </network-security-config>
