--- a/android-app/core-features/app/src/main/res/xml/network_security_config.xml
+++ b/android-app/core-features/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,6 @@
    <network-security-config>
        <domain-config cleartextTrafficPermitted="true">
 <!--           <domain includeSubdomains="true">10.170.15.138</domain>-->
-           <domain includeSubdomains="true">10.143.141.163</domain>
+           <domain includeSubdomains="true">pbl311-production.up.railway.app</domain>
        </domain-config>
    </network-security-config>
