Fix error camera lah intinya

--- a/android-app/core-features/app/src/main/res/xml/network_security_config.xml
+++ b/android-app/core-features/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,9 @@
-   <network-security-config>
-       <domain-config cleartextTrafficPermitted="true">
-<!--           <domain includeSubdomains="true">10.170.15.138</domain>-->
-           <domain includeSubdomains="true">pbl311-production.up.railway.app</domain>
-       </domain-config>
-   </network-security-config>
+<network-security-config>
+    <domain-config cleartextTrafficPermitted="true">
+        <!-- Server backend -->
+        <domain includeSubdomains="true">pbl311-production.up.railway.app</domain>
+
+        <!-- IP MediaMTX (HTTP) -->
+        <domain includeSubdomains="true">172.27.3.163</domain>
+    </domain-config>
+</network-security-config>
