--- a/android-app/core-features/app/src/main/res/xml/network_security_config.xml
+++ b/android-app/core-features/app/src/main/res/xml/network_security_config.xml
@@ -1,9 +1,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <!-- Server backend -->
-        <domain includeSubdomains="true">pbl311-production.up.railway.app</domain>
-
-        <!-- IP MediaMTX (HTTP) -->
-        <domain includeSubdomains="true">172.27.3.163</domain>
+        <!--<domain includeSubdomains="true">pbl311-production.up.railway.app</domain>-->
+        <domain includeSubdomains="true">192.168.122.163</domain>
     </domain-config>
 </network-security-config>
